[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/level/sprites/Background.png" type="Texture" id=1]
[ext_resource path="res://assets/camera/Camera2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/level/music/SMB - Castle Theme.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/level/Level.gd" type="Script" id=4]
[ext_resource path="res://assets/menu/GUI.tscn" type="PackedScene" id=5]

[node name="Level" type="Node2D" groups=["level"]]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1000, 1000 )
scale = Vector2( 50, 50 )
texture = ExtResource( 1 )

[node name="GoombaSpawner" type="Timer" parent="."]
autostart = true

[node name="BowserSpawner" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="BGMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
autoplay = true
max_distance = 10000.0

[node name="Camera2D" parent="." instance=ExtResource( 2 )]
current = true
limit_left = 0
limit_top = 0
limit_right = 2000
limit_bottom = 2000

[node name="GUI" parent="." instance=ExtResource( 5 )]
pause_mode = 2

[connection signal="timeout" from="GoombaSpawner" to="." method="_on_GoombaSpawner_timeout"]
[connection signal="timeout" from="BowserSpawner" to="." method="_on_BowserSpawner_timeout"]
